syntax = "proto3";

package api.application.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "credit-analytics-backend/api/application/v1;v1";
option java_multiple_files = true;
option java_package = "api.application.v1";

service Application {
  rpc CreateApplication (CreateApplicationRequest) returns (CreateApplicationReply) {
    option (google.api.http) = {
      post: "/v1/applications",
      body: "*"
    };
  }
  rpc GetApplication (GetApplicationRequest) returns (GetApplicationReply) {
    option (google.api.http) = {
      get: "/v1/applications/{id}"
    };
  }
  rpc ListApplications (ListApplicationsRequest) returns (ListApplicationsReply) {
    option (google.api.http) = {
      get: "/v1/applications"
    };
  }
  rpc UpdateApplication (UpdateApplicationRequest) returns (UpdateApplicationReply) {
    option (google.api.http) = {
      put: "/v1/applications/{id}",
      body: "*"
    };
  }
  rpc SoftDeleteApplication (SoftDeleteApplicationRequest) returns (SoftDeleteApplicationReply) {
    option (google.api.http) = {
      delete: "/v1/applications/{id}"
    };
  }
  rpc ListStatusLogs (ListStatusLogsRequest) returns (ListStatusLogsReply) {
    option (google.api.http) = {
      get: "/v1/applications/{application_id}/status-logs"
    };
  }
}

message ApplicationAttribute {
  string key = 1;
  string value = 2;
  string data_type = 3;
}

message StatusLog {
  string id = 1;
  string from_status = 2;
  string to_status = 3;
  string changed_by = 4;
  string change_reason = 5;
  google.protobuf.Timestamp changed_at = 6;
}

message ApplicationInfo {
  string id = 1;
  string applicant_id = 2;
  string product_id = 3;
  string ao_id = 4;
  string loan_amount = 5; // String for precision (Decimal)
  int32 tenor_months = 6;
  string interest_type = 7;
  string interest_rate = 8;
  string loan_purpose = 9;
  string application_channel = 10;
  string status = 11;
  string branch_code = 12;
  repeated ApplicationAttribute attributes = 13;
  google.protobuf.Timestamp submitted_at = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}

message CreateApplicationRequest {
  string applicant_id = 1;
  string product_id = 2;
  string ao_id = 3;
  string loan_amount = 4;
  int32 tenor_months = 5;
  string interest_type = 6;
  string interest_rate = 7;
  string loan_purpose = 8;
  string application_channel = 9;
  string branch_code = 10;
  repeated ApplicationAttribute attributes = 11;
}

message CreateApplicationReply {
  string id = 1;
  string message = 2;
}

message GetApplicationRequest {
  string id = 1;
}

message GetApplicationReply {
  ApplicationInfo application = 1;
}

message UpdateApplicationRequest {
  string id = 1;
  string applicant_id = 2;
  string product_id = 3;
  string ao_id = 4;
  string loan_amount = 5;
  int32 tenor_months = 6;
  string interest_type = 7;
  string interest_rate = 8;
  string loan_purpose = 9;
  string status = 10;
  repeated ApplicationAttribute attributes = 11;
}

message UpdateApplicationReply {
  string message = 1;
}

message ListApplicationsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string status = 3;
  string applicant_id = 4;
}

message ListApplicationsReply {
  repeated ApplicationInfo applications = 1;
  int32 total = 2;
}

message SoftDeleteApplicationRequest {
  string id = 1;
}

message SoftDeleteApplicationReply {
  string message = 1;
}

message ListStatusLogsRequest {
  string application_id = 1;
}

message ListStatusLogsReply {
  repeated StatusLog logs = 1;
}
